--- a/src/main/webapp/WEB-INF/spring.properties
+++ b/src/main/webapp/WEB-INF/spring.properties
@@ -1,8 +1,8 @@
 # database properties
-mongo.db.name=walcupom
-mongo.host.name=localhost
-mongo.host.port=27017
+#mongo.db.name=walcupom
+#mongo.host.name=localhost
+#mongo.host.port=27017
 
-#mongo.db.name=app18418816
-#mongo.host.name=mongodb://heroku:edcca3a5eba9da76c818b68e97cd058c@paulo.mongohq.com
-#mongo.host.port=10053
+mongo.db.name=app18418816
+mongo.host.name=mongodb://heroku:edcca3a5eba9da76c818b68e97cd058c@paulo.mongohq.com
+mongo.host.port=10053
