--- a/src/main/webapp/WEB-INF/spring.properties
+++ b/src/main/webapp/WEB-INF/spring.properties
@@ -3,6 +3,5 @@
 #mongo.host.name=localhost
 #mongo.host.port=27017
 
+MONGOHQ_URL=mongodb://heroku:edcca3a5eba9da76c818b68e97cd058c@paulo.mongohq.com:10053/app18418816
 mongo.db.name=app18418816
-mongo.host.name=mongodb://heroku:edcca3a5eba9da76c818b68e97cd058c@paulo.mongohq.com
-mongo.host.port=10053
